deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-garage
  namespace: my-garage
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - my-garage.example.com
      secretName: my-garage-tls
  rules:
    - host: my-garage.example.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: my-garage-backend
                port:
                  number: 8000
          - path: /media
            pathType: Prefix
            backend:
              service:
                name: my-garage-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-garage-frontend
                port:
                  number: 80
